--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,182 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   padding: 0;
-  margin: 0 auto;
+  margin: 0;
   font-family: "Barlow Semi Condensed", sans-serif;
   font-size: 13px;
+}
+
+.wrapper {
+  background-color: #ecf2f8;
+  width: 100%;
+}
+
+.main-box {
+  margin: 0 auto;
+  width: 90vw;
+  padding: 5rem 0 5rem 0;
+}
+
+.box {
+  padding: 2rem;
+  margin: 2rem 0 2rem 0;
+  border-radius: 1rem;
+  -webkit-box-shadow: 14px 15px 38px -20px rgba(0, 0, 0, 0.64);
+          box-shadow: 14px 15px 38px -20px rgba(0, 0, 0, 0.64);
+}
+
+.box .profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  margin: 0;
+}
+
+.box .profile .img-cont {
+  margin-right: 1em;
+  border-radius: 50%;
+}
+
+.box .profile .img-cont img {
+  border: 3px solid #cfcfcf;
+  border-radius: 50%;
+}
+
+.box .profile .profile-name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.box .profile .profile-name h1 {
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: .25rem;
+}
+
+.box .profile .profile-name .title {
+  font-size: 12px;
+  font-weight: 500;
+  margin-top: .25rem;
+  opacity: 50%;
+}
+
+.box .main-p {
+  font-weight: 600;
+  font-size: 20px;
+  text-align: justify;
+  margin: 1.5rem 0;
+}
+
+.box .sub-p {
+  font-weight: 500;
+  font-size: 13px;
+  color: #cfcfcf;
+  text-align: justify;
+  margin: 1rem 0;
+}
+
+.vio {
+  background-color: #7541c8;
+  color: #fff;
+}
+
+.gray {
+  background-color: #48556a;
+  color: #fff;
+}
+
+.white {
+  background-color: #fff;
+  color: #48556a;
+}
+
+.white .sub-p {
+  color: #48556a;
+  opacity: 0.7;
+}
+
+.dark-blue {
+  background-color: #19212e;
+  color: #fff;
+}
+
+.attribution {
+  width: 80%;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 376px) {
+  .main-box {
+    width: 70vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin: 0 auto;
+    padding: 3rem 0 3rem 0;
+  }
+  .main-box .box {
+    margin: 0;
+  }
+  .main-box .box h1 {
+    font-size: 16px;
+  }
+  .main-box .box .title {
+    font-size: 13px;
+  }
+  .main-box .box .main-p {
+    font-size: 22px;
+    text-align: left;
+    margin-top: 0.5rem;
+  }
+  .main-box .box .sub-p {
+    font-size: 15px;
+    margin: 0;
+  }
+  .main-box .left-boxes {
+    width: 74%;
+  }
+  .main-box .left-boxes .left-top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-bottom: 1.5rem;
+  }
+  .main-box .left-boxes .left-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .main-box .left-boxes .box-1 {
+    width: 65.3333%;
+  }
+  .main-box .left-boxes .box-2 {
+    width: 32.3333%;
+  }
+  .main-box .right-box {
+    width: 24%;
+  }
+  .attribution {
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
